Version 0.13.9
    * display build parameters (PR #246)
    * auto load builds option in settings (PR #246)

Version 0.13.8
    * Initialize Notification on Load
    * add About Entry for 2020.1+
    * #231 jobs in folders: collapsed after refresh: Last Expanded and Selections are restored after Restart IDE too. Loaded Builds are not reloaded on restore last state.
    * #197 Show log for individual builds of selected jobs

Version 0.13.7
    * #232 PersistentStringParameter not supported
    * #233 Error overlay over whole of screen if connection is lost. Add Notification group to configure the behaviour in IDE settings.
    * #234 Can't seem to connect to my jenkins server with the latest version 0.13.6-2020.1
    * Add Notification group to configure the behaviour in IDE settings.
    * Fix: regression: remove trailing Slash for URL Validation
    * #230: jobs in folders: job name too long
    * #231: jobs in folders: collapsed after refresh

Version 0.13.6
    * #225 Git Branch Parameter is unsupported
    * #227 Jenkins invalid configuration causes AuthenticationException and UI not respond correctly to this

Version 0.13.5
    * #221 Allow showing all build results in the status bar. Thanks to @nvdweem
    * #222 Separate icon for running builds. Thanks to @nvdweem
    * #217 Show Log not possible for selected Job if self-signed or invalid SSL certificate is used
    * #223 FileParameterDefinition is unsupported

Version 0.13.4
    * #219 How to run a jenkins job with hidden fields?
    * #218 "Show log" on Job without Build leads to error

Version 0.13.3
    * add GoTo Allure report
    * #213 NodeParameterDefinition is unsupported
    * #215 Read timed out: Add socket and connection timeout to Configuration (default 10 sec.)

Version 0.13.2
    * #64: NumberFormatException on start of IntelliJ
    * #207: NumberFormatException from Build.createBuildFromRss #207
    * #208: Jenkins.LoadBuilds already registered Exception

Version 0.13.1