@@ -2,6 +2,7 @@
 <ul>
     <li>display build parameters (PR #246)</li>
     <li>auto load builds option in settings (PR #246)</li>
+    <li>#249 PT_BRANCH_TAG is unsupported</li>
 </ul>
 <h3>0.13.8</h3>
 <ul>
