@@ -1,6 +1,7 @@
 Version 0.13.9
     * display build parameters (PR #246)
     * auto load builds option in settings (PR #246)
+    * #249 PT_BRANCH_TAG is unsupported
 
 Version 0.13.8
     * Initialize Notification on Load
